test/errors/stmt_async_with.py
def f(cm):
    async with cm:
        pass
