test/errors/stmt_async_with.py.expected
test/errors/stmt_async_with.py:2 error: `async with` outside async function
